[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterclient"
version = "0.1.0"
description = "Fetch tweets as typed Python objects. Auth via sessions.jsonl."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
twitterclient = "twitterclient.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["twitterclient*"]
